[package]
name = "string_capacity"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/dsherret/string_capacity"
description = "String builder that calculates the capacity."

[dependencies]
itoa = "1.0.14"

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "bench"
harness = false
