[package]
name = "capacity_builder"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/dsherret/capacity_builder"
description = "Builders where the code to calculate the capacity is the same as the code to write what's being built."

[dependencies]
itoa = "1.0.14"

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "bench"
harness = false
